--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,8 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.hbs": ["@anikin/parcel-transformer-handlebars"]
+    "*.pug": [
+      "@parcel/transformer-pug"
+    ]
   }
 }
