--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "node_modules/.bin/parcel src/pages/main-page.html",
-    "start": "parcel src/pages/index.html --port 3000"
+    "dev": "parcel src/pages/index.pug --port 3000",
+    "start": "node server.js",
+    "build": "parcel build src/pages/index.pug"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@parcel/transformer-less": "^2.6.2",
+    "@parcel/transformer-pug": "2.6.2",
     "autoprefixer": "10.4.7",
     "cssnano": "5.1.12",
+    "express": "4.18.1",
     "gulp": "4.0.2",
     "less": "4.1.3",
     "less-watch-compiler": "1.16.3",
-    "parcel": "2.6.1",
+    "parcel": "2.6.2",
+    "path": "0.12.7",
     "pug": "3.0.2",
     "pug-cli": "1.0.0-alpha6",
     "suss": "0.3.3"
   },
-  "engines" : {
-    "node" : ">=12.0.0"
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
