--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "parcel src/pages/index.pug --port 3000",
     "start": "node server.js",
-    "build": "parcel build src/pages/index.pug"
+    "build": "parcel build src/pages/index.pug",
+    "build-test": "parcel src/utils/test.html --port 3000"
   },
   "keywords": [],
   "author": "",
@@ -13,17 +14,25 @@
   "devDependencies": {
     "@parcel/transformer-less": "^2.6.2",
     "@parcel/transformer-pug": "2.6.2",
+    "assert": "^2.0.0",
     "autoprefixer": "10.4.7",
+    "buffer": "^6.0.3",
+    "common-js": "^0.3.8",
     "cssnano": "5.1.12",
+    "eslint": "^8.19.0",
     "express": "4.18.1",
     "gulp": "4.0.2",
     "less": "4.1.3",
     "less-watch-compiler": "1.16.3",
+    "os-browserify": "^0.3.0",
     "parcel": "2.6.2",
     "path": "0.12.7",
+    "path-browserify": "^1.0.1",
     "pug": "3.0.2",
     "pug-cli": "1.0.0-alpha6",
-    "suss": "0.3.3"
+    "suss": "0.3.3",
+    "ts-node": "10.8.2",
+    "typescript": "4.7.4"
   },
   "engines": {
     "node": ">=12.0.0"
