--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
     "dev": "parcel src/pages/index.pug --port 3000",
     "start": "node server.js",
     "build": "parcel build src/pages/index.pug",
-    "build-test": "parcel src/utils/test.html --port 3000"
+    "build-test": "parcel src/utils/test/test.html --port 3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "4.18.1",
+    "lodash": "4.17.21"
+  },
   "devDependencies": {
     "@parcel/transformer-less": "^2.6.2",
     "@parcel/transformer-pug": "2.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "assert": "^2.0.0",
     "autoprefixer": "10.4.7",
     "buffer": "^6.0.3",
     "common-js": "^0.3.8",
     "cssnano": "5.1.12",
-    "eslint": "^8.19.0",
-    "express": "4.18.1",
+    "eslint": "8.19.0",
+    "eslint-config-airbnb": "19.0.4",
     "gulp": "4.0.2",
     "less": "4.1.3",
     "less-watch-compiler": "1.16.3",
