--- a/.parcelrc
+++ b/.parcelrc
@@ -2,7 +2,7 @@
   "extends": "@parcel/config-default",
   "transformers": {
     "*.pug": [
-      "@parcel/transformer-pug"
+      "@parcel/transformer-inline-string"
     ]
   }
 }
