--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "test",
+  "name": "maty.yandex.frontend",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "parcel src/pages/index.pug --port 3000",
-    "start": "node server.js",
-    "build": "parcel build src/pages/index.pug",
-    "build-test": "parcel src/utils/test/test.html --port 3000"
+    "dev": "parcel src/index.html --port 3000",
+    "start": "parcel build src/index.html && node server.js",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "4.18.1",
-    "lodash": "4.17.21"
-  },
   "devDependencies": {
-    "@parcel/transformer-less": "^2.6.2",
-    "@parcel/transformer-pug": "2.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "assert": "^2.0.0",
-    "autoprefixer": "10.4.7",
-    "buffer": "^6.0.3",
-    "common-js": "^0.3.8",
-    "cssnano": "5.1.12",
-    "eslint": "8.19.0",
-    "eslint-config-airbnb": "19.0.4",
-    "gulp": "4.0.2",
+    "@parcel/transformer-inline-string": "2.6.2",
+    "@parcel/transformer-less": "2.6.2",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "assert": "2.0.0",
+    "buffer": "6.0.3",
+    "eslint": "8.20.0",
+    "express": "4.18.1",
     "less": "4.1.3",
     "less-watch-compiler": "1.16.3",
-    "os-browserify": "^0.3.0",
+    "os-browserify": "0.3.0",
     "parcel": "2.6.2",
     "path": "0.12.7",
-    "path-browserify": "^1.0.1",
-    "pug": "3.0.2",
-    "pug-cli": "1.0.0-alpha6",
-    "suss": "0.3.3",
-    "ts-node": "10.8.2",
+    "path-browserify": "1.0.1",
+    "ts-node": "10.9.1",
     "typescript": "4.7.4"
   },
-  "engines": {
-    "node": ">=12.0.0"
+  "dependencies": {
+    "pug": "3.0.2",
+    "uuid": "8.3.2"
   }
 }
