--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "parcel": "2.6.2",
     "path": "0.12.7",
     "path-browserify": "1.0.1",
+    "prettier": "2.7.1",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   },
