--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "typeRoots": ["./types"]
   }
 }
