--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "parcel src/index.html --port 3000",
     "start": "parcel build src/index.html && node server.js",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "test": "parcel src/utils/test/test.html --port 5000"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +19,11 @@
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "assert": "2.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "6.0.3",
+    "crypto-browserify": "^3.12.0",
     "eslint": "8.20.0",
+    "events": "^3.3.0",
     "express": "4.18.1",
     "less": "4.1.3",
     "less-watch-compiler": "1.16.3",
@@ -28,8 +32,13 @@
     "path": "0.12.7",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
-    "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
+    "url": "^0.11.0"
   },
   "dependencies": {
     "pug": "3.0.2",
