--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "devDependencies": {
     "@parcel/transformer-inline-string": "2.6.2",
     "@parcel/transformer-less": "2.6.2",
-    "@types/pug": "^2.0.6",
-    "@types/uuid": "^8.3.4",
+    "@types/pug": "2.0.6",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "assert": "2.0.0",
-    "browserify-zlib": "^0.2.0",
+    "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
-    "crypto-browserify": "^3.12.0",
+    "console-browserify": "^1.2.0",
+    "crypto-browserify": "3.12.0",
     "eslint": "8.20.0",
     "events": "^3.3.0",
     "express": "4.18.1",
@@ -32,13 +33,13 @@
     "path": "0.12.7",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
-    "querystring-es3": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "string_decoder": "^1.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "url": "^0.11.0"
+    "querystring-es3": "0.2.1",
+    "stream-browserify": "3.0.0",
+    "stream-http": "3.2.0",
+    "string_decoder": "1.3.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4",
+    "url": "0.11.0"
   },
   "dependencies": {
     "pug": "3.0.2",
