sprint-3 исправления prettier

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "parcel src/index.html --port 3000",
     "start": "parcel build src/index.html && node server.js",
     "build": "parcel build src/index.html",
-    "linter": "node_modules/.bin/eslint src",
+    "linter": "node_modules/.bin/eslint .",
     "test": "parcel src/utils/test/test.html --port 5000"
   },
   "keywords": [],
