--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "parcel src/index.html --port 3000",
+    "dev": "webpack serve --mode=development --progress",
     "start": "parcel build src/index.html && node server.js",
-    "build": "parcel build src/index.html",
+    "build": "webpack",
+    "build:prod": "webpack --config webpack.config.prod.js",
     "linter": "node_modules/.bin/eslint .",
-    "test": "parcel src/utils/test/test.html --port 5000"
+    "test": " ./node_modules/.bin/mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "7.18.10",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-typescript": "7.12.1",
+    "@babel/register": "7.18.9",
     "@parcel/transformer-inline-string": "2.6.2",
     "@parcel/transformer-less": "2.6.2",
+    "@testdeck/mocha": "0.2.0",
+    "@types/chai": "4.3.3",
+    "@types/mocha": "9.1.1",
+    "@types/node": "^18.7.8",
     "@types/pug": "2.0.6",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.6",
@@ -22,25 +31,44 @@
     "assert": "2.0.0",
     "browserify-zlib": "0.2.0",
     "buffer": "6.0.3",
-    "console-browserify": "^1.2.0",
+    "chai": "4.3.6",
+    "clean-webpack-plugin": "^4.0.0",
+    "console-browserify": "1.2.0",
+    "copy-webpack-plugin": "^11.0.0",
     "crypto-browserify": "3.12.0",
+    "css-loader": "^6.7.1",
     "eslint": "8.20.0",
-    "events": "^3.3.0",
     "express": "4.18.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "less": "4.1.3",
+    "less-loader": "^11.0.0",
     "less-watch-compiler": "1.16.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "mocha": "10.0.0",
+    "node-less": "^1.0.0",
+    "nyc": "15.1.0",
     "os-browserify": "0.3.0",
     "parcel": "2.6.2",
     "path": "0.12.7",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
+    "pug-loader": "^2.4.0",
+    "pug-plugin": "^4.1.1",
     "querystring-es3": "0.2.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
+    "style-loader": "3.3.1",
+    "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.7.4",
-    "url": "0.11.0"
+    "url": "0.11.0",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "pug": "3.0.2",
