--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "scripts": {
     "dev": "webpack serve --mode=development --progress",
-    "start": "parcel build src/index.html && node server.js",
+    "start": "webpack && node server.js",
     "build": "webpack",
+    "server": "node server.js",
     "build:prod": "webpack --config webpack.config.prod.js",
     "linter": "node_modules/.bin/eslint .",
     "test": " ./node_modules/.bin/mocha"
@@ -24,53 +25,45 @@
     "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
     "@types/node": "^18.7.8",
-    "@types/pug": "2.0.6",
+    "@types/pug": "^2.0.6",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
     "assert": "2.0.0",
-    "browserify-zlib": "0.2.0",
-    "buffer": "6.0.3",
     "chai": "4.3.6",
     "clean-webpack-plugin": "^4.0.0",
-    "console-browserify": "1.2.0",
     "copy-webpack-plugin": "^11.0.0",
-    "crypto-browserify": "3.12.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "6.7.1",
     "eslint": "8.20.0",
     "express": "4.18.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "less": "4.1.3",
+    "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "less-watch-compiler": "1.16.3",
     "mini-css-extract-plugin": "^2.6.1",
     "mocha": "10.0.0",
-    "node-less": "^1.0.0",
-    "nyc": "15.1.0",
-    "os-browserify": "0.3.0",
-    "parcel": "2.6.2",
     "path": "0.12.7",
     "path-browserify": "1.0.1",
     "prettier": "2.7.1",
-    "pug-loader": "^2.4.0",
-    "pug-plugin": "^4.1.1",
     "querystring-es3": "0.2.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "string_decoder": "1.3.0",
     "style-loader": "3.3.1",
+    "svgo-loader": "3.0.1",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.7.4",
     "url": "0.11.0",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "4.10.0",
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
+    "mini-svg-data-uri": "^1.4.4",
     "pug": "3.0.2",
     "uuid": "8.3.2"
   }
