--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "webpack serve --mode=development --progress",
     "start": "webpack && node server.js",
     "build": "webpack",
-    "server": "node server.js",
-    "build:prod": "webpack --config webpack.config.prod.js",
-    "linter": "node_modules/.bin/eslint .",
-    "test": " ./node_modules/.bin/mocha"
+    "linter": "node_modules/.bin/eslint ."
   },
   "keywords": [],
   "author": "",
@@ -19,8 +16,6 @@
     "@babel/preset-env": "7.18.10",
     "@babel/preset-typescript": "7.12.1",
     "@babel/register": "7.18.9",
-    "@parcel/transformer-inline-string": "2.6.2",
-    "@parcel/transformer-less": "2.6.2",
     "@testdeck/mocha": "0.2.0",
     "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
@@ -44,12 +39,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "mocha": "10.0.0",
     "path": "0.12.7",
-    "path-browserify": "1.0.1",
     "prettier": "2.7.1",
-    "querystring-es3": "0.2.1",
-    "stream-browserify": "3.0.0",
-    "stream-http": "3.2.0",
-    "string_decoder": "1.3.0",
     "style-loader": "3.3.1",
     "svgo-loader": "3.0.1",
     "ts-loader": "9.3.1",
