--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "webpack serve --mode=development --progress",
     "start": "webpack && node server.js",
     "build": "webpack",
     "linter": "node_modules/.bin/eslint ."
@@ -26,17 +25,17 @@
     "@typescript-eslint/parser": "5.30.6",
     "assert": "2.0.0",
     "chai": "4.3.6",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "8.20.0",
     "express": "4.18.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.0.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "less": "4.1.3",
+    "less-loader": "11.0.0",
     "less-watch-compiler": "1.16.3",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.0.0",
     "path": "0.12.7",
     "prettier": "2.7.1",
