--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint:all"
+    }
+  },
   "devDependencies": {
     "@babel/core": "7.18.10",
     "@babel/preset-env": "7.18.10",
@@ -32,6 +37,7 @@
     "express": "4.18.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "^8.0.1",
     "less": "4.1.3",
     "less-loader": "11.0.0",
     "less-watch-compiler": "1.16.3",
