--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "prettier"],
+  "ignorePatterns": ["dist/**"],
   "rules": {
     "max-len": [2, 100],
     "quotes": [2, "double"],
