--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint:all"
+      "pre-commit": "npm-run-all linter"
     }
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "8.20.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "4.18.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
