--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,5 @@
 {
   "extension": ["ts"],
   "spec": "src/**/*.test.ts",
-  "require": "test/babel-register.js"
+  "require": ["jsdom-global/register", "ts-node/register"]
 }
