--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack && node server.js",
     "build": "webpack",
-    "linter": "node_modules/.bin/eslint ."
+    "linter": "node_modules/.bin/eslint .",
+    "test": "mocha --require ignore-styles"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +17,8 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
-    "@babel/preset-env": "7.18.10",
-    "@babel/preset-typescript": "7.12.1",
-    "@babel/register": "7.18.9",
-    "@testdeck/mocha": "0.2.0",
     "@types/chai": "4.3.3",
-    "@types/mocha": "9.1.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.8",
     "@types/pug": "^2.0.6",
     "@types/uuid": "8.3.4",
@@ -37,8 +33,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "express": "4.18.1",
     "file-loader": "6.2.0",
+    "handlebars-loader": "^1.7.2",
     "html-webpack-plugin": "5.5.0",
     "husky": "^8.0.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^20.0.0",
+    "jsdom-global": "^3.0.2",
     "less": "4.1.3",
     "less-loader": "11.0.0",
     "less-watch-compiler": "1.16.3",
