sprint-4 update precommit

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all linter"
+      "pre-commit": "npm run test && npm run linter"
     }
   },
   "devDependencies": {
