--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-loader": "6.2.0",
     "handlebars-loader": "^1.7.2",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^8.0.1",
+    "husky": "8.0.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^20.0.0",
     "jsdom-global": "^3.0.2",
