--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "linter": "node_modules/.bin/eslint .",
     "test": "mocha --require ignore-styles",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "stylelint": "stylelint '**/*.less'"
   },
   "keywords": [],
   "author": "",
@@ -41,8 +42,14 @@
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.0.0",
     "path": "0.12.7",
+    "postcss-less": "^6.0.0",
     "prettier": "2.7.1",
     "style-loader": "3.3.1",
+    "stylelint": "^14.11.0",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-declaration-strict-value": "^1.9.0",
+    "stylelint-less": "^1.0.6",
     "svgo-loader": "3.0.1",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
