--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars-loader": "^1.7.2",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.0",
+    "path-browserify": "1.0.1",
     "ignore-styles": "^5.0.1",
     "jsdom": "^20.0.0",
     "jsdom-global": "^3.0.2",
