--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack && node server.js",
     "build": "webpack",
-    "linter": "node_modules/.bin/eslint .",
+    "eslint": "node_modules/.bin/eslint .",
     "test": "mocha --require ignore-styles",
     "prepare": "husky install",
     "stylelint": "stylelint '**/*.less'"
@@ -15,9 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "4.3.3",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.8",
-    "@types/pug": "^2.0.6",
+    "@types/mocha": "9.1.1",
+    "@types/node": "18.7.8",
+    "@types/pug": "2.0.6",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
@@ -27,29 +27,29 @@
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "8.20.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "4.2.1",
     "express": "4.18.1",
     "file-loader": "6.2.0",
-    "handlebars-loader": "^1.7.2",
+    "handlebars-loader": "1.7.2",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.0",
     "path-browserify": "1.0.1",
-    "ignore-styles": "^5.0.1",
-    "jsdom": "^20.0.0",
-    "jsdom-global": "^3.0.2",
+    "ignore-styles": "5.0.1",
+    "jsdom": "20.0.0",
+    "jsdom-global": "3.0.2",
     "less": "4.1.3",
     "less-loader": "11.0.0",
     "less-watch-compiler": "1.16.3",
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.0.0",
     "path": "0.12.7",
-    "postcss-less": "^6.0.0",
+    "postcss-less": "6.0.0",
     "prettier": "2.7.1",
     "style-loader": "3.3.1",
-    "stylelint": "^14.11.0",
-    "stylelint-config-recommended": "^9.0.0",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-declaration-strict-value": "^1.9.0",
+    "stylelint": "14.11.0",
+    "stylelint-config-recommended": "9.0.0",
+    "stylelint-config-standard": "28.0.0",
+    "stylelint-declaration-strict-value": "1.9.0",
     "stylelint-less": "^1.0.6",
     "svgo-loader": "3.0.1",
     "ts-loader": "9.3.1",
@@ -63,7 +63,7 @@
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "mini-svg-data-uri": "^1.4.4",
+    "mini-svg-data-uri": "1.4.4",
     "pug": "3.0.2",
     "uuid": "8.3.2"
   }
